v0.18.0 — Self-Modifying Code: Code Wizard reviews quality every 15min, generates improvements via codellama:7b, applies changes, compiles, auto-rollback on failure, commits+pushes on success. Full safety net: backup before every change, compile verification, exception recovery. 43 total systems.